force-app/main/default/objects/sf_devops__Object_Activity__c/sf_devops__Object_Activity__c.object-meta.xml
<CustomObject>
    <description>A record of activity for an object in the Dev ops Center.  An activity is some operation performed that effects the state of an object.</description>
    <label>Object Activity</label>
    <nameField>
        <displayFormat>OA-{0}</displayFormat>
        <label>Object Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>