force-app/main/default/objects/sf_devops__Object_Activity__c/fields/sf_devops__Hidden__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks an activity as an internal book keeping activity that should not be displayed</description>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>