force-app/main/default/objects/sf_devops__Object_Activity__c/fields/sf_devops__Operation_Result__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Operation_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A reference to the async results for this activity</description>
    <label>Operation Result</label>
    <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
    <relationshipLabel>Object Activities</relationshipLabel>
    <relationshipName>Object_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>