force-app/main/default/objects/sf_devops__Object_Activity__c/fields/sf_devops__Parent_Activity__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Parent_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the activity that is the main activity being recorded.</description>
    <label>Parent Activity</label>
    <referenceTo>sf_devops__Object_Activity__c</referenceTo>
    <relationshipLabel>Child Activities</relationshipLabel>
    <relationshipName>Child_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>