force-app/main/default/objects/sf_devops__Object_Activity__c/fields/sf_devops__Project__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Project__c</fullName>
    <description>The project we are associated with.</description>
    <label>Project</label>
    <referenceTo>sf_devops__Project__c</referenceTo>
    <relationshipLabel>Object Activities</relationshipLabel>
    <relationshipName>Object_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>