force-app/main/default/objects/sf_devops__Object_Activity__c/fields/sf_devops__Target_Pipeline_Stage__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Target_Pipeline_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The stage that received this activity</description>
    <label>Target Pipeline Stage</label>
    <referenceTo>sf_devops__Pipeline_Stage__c</referenceTo>
    <relationshipLabel>Target Object Activities</relationshipLabel>
    <relationshipName>Object_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>