force-app/main/default/objects/sf_devops__Object_Activity__c/fields/sf_devops__Work_Item__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The work item involved in this activity</description>
    <label>Work Item</label>
    <referenceTo>sf_devops__Work_Item__c</referenceTo>
    <relationshipLabel>Object Activities</relationshipLabel>
    <relationshipName>Object_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>